--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,24 @@ rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
+  - jruby-18mode
+  - jruby-19mode
+  - jruby-head
 
 script: bundle exec rake test:ruby
 
 notifications:
   email: false
+  #TODO: flowdock: [api token]
+
+services:
+  - mongodb
+
+branches:
+  only:
+    - master
+    - release
+
+matrix:
+  allow_failures:
+    - rvm: jruby-head
