--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,10 @@ language: ruby
 
 rvm:
   - 1.8.7
-  - 1.9.2
   - 1.9.3
-  - jruby-18mode
-  - jruby-19mode
-  - jruby-head
+  # - jruby-18mode
+  # - jruby-19mode
+  # - jruby-head
 
 script: bundle exec rake test:ruby
 
