RUBY-486 Emphasize "safe" mode in documentation, explicitly in the tutorial also use :safe => true in examples and other script instances also fix typos in documentation

--- a/docs/load/unicorn/unicorn.rb.template
+++ b/docs/load/unicorn/unicorn.rb.template
@@ -23,7 +23,7 @@ stdout_path "#{@dir}log/unicorn.stdout.log"
 # NOTE: You need this when using forking web servers!
 after_fork do |server, worker|
   $con.close if $con
-  $con = Mongo::Connection.new
+  $con = Mongo::Connection.new('localhost', 27017, :safe => true)
   $db = $con['foo']
   STDERR << "FORKED #{server} #{worker}"
 end
