--- a/examples/web/unicorn/unicorn.rb.template
+++ b/examples/web/unicorn/unicorn.rb.template
@@ -22,8 +22,8 @@ stdout_path "#{@dir}log/unicorn.stdout.log"
 
 # NOTE: You need this when using forking web servers!
 after_fork do |server, worker|
-  $con.close if $con
-  $con = Mongo::Connection.new('localhost', 27017, :safe => true)
-  $db = $con['foo']
+  $client.close if $client
+  $client = Mongo::Client.new('localhost', 27017, :safe => true)
+  $db = $client['foo']
   STDERR << "FORKED #{server} #{worker}"
 end
