--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: ruby
 rvm:
   - 1.8.7
   - 1.9.3
+  - ruby-head
   # - jruby-18mode
   # - jruby-19mode
   # - jruby-head
@@ -23,4 +24,5 @@ branches:
 
 matrix:
   allow_failures:
+    - rvm: ruby-head
     - rvm: jruby-head
