--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,7 @@ rvm:
   - 1.8.7
   - 1.9.3
   - ruby-head
-  # - jruby-18mode
-  # - jruby-19mode
-  # - jruby-head
+  - jruby-head
 
 bundler_args: --without deploy
 
