rake cleanup, better versioning

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-html
-pkg
-doc
-ydoc
+docs
 .yardoc
 *.gem
 nbproject
@@ -11,7 +8,7 @@ nbproject
 ext/cbson/Makefile
 lib/mongo_ext/Makefile
 lib/bson_ext
-benchmark
+tasks/benchmark/exp_series_suite_*.js
 *~
 *#*
 *.class
@@ -25,4 +22,5 @@ test/tools/data/
 Gemfile.lock
 .idea/*
 tmp
-
+data
+.DS_Store
