--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ rvm:
   - ruby-head
   - jruby-head
 
+bundler_args: --without deployment
+
 script: bundle exec rake test:ruby
 
 notifications:
@@ -24,4 +26,3 @@ matrix:
   allow_failures:
     - rvm: ruby-head
     - rvm: jruby-head
-
