fixing issues in gemspecs, adding active support to gemfile

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rvm:
   - ruby-head
   - jruby-head
 
-bundler_args: --without deployment
+bundler_args: --without deploy
 
 script: bundle exec rake test:ruby
 
