--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ rvm:
 
 bundler_args: --without deploy
 
-script: bundle exec rake test:ruby
+script: bundle exec rake test
 
 notifications:
   email: false
@@ -25,5 +25,6 @@ branches:
 
 matrix:
   allow_failures:
+    - rvm: jruby
     - rvm: ruby-head
     - rvm: jruby-head
