RUBY-538 adding gem signature and new contributor to gemspecs

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ docs
 ext/cbson/Makefile
 ext/jbson/target/java
 Gemfile.lock
+gem-private_key.pem
 lib/bson_ext
 lib/mongo_ext/Makefile
 nbproject
