RUBY-585 setting up tailor, rspec and simplecov for 2.0 branch

--- a/.gitignore
+++ b/.gitignore
@@ -10,19 +10,13 @@
 *~
 .DS_Store
 .idea/*
-.rvmrc
-.ruby-version
 .yardoc
 coverage
 data
 docs
-ext/cbson/Makefile
-ext/jbson/target/java
 Gemfile.lock
+.ruby-gemset
+.ruby-version
 gem-private_key.pem
-lib/bson_ext
-lib/mongo_ext/Makefile
 nbproject
-tasks/benchmark/exp_series_suite_*.js
-test/tools/data/
 tmp
