minor: creating development group, adding pry to bundler

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ rvm:
   - rbx-19mode
   - ree
 
-bundler_args: --without deploy
+bundler_args: --without deploy development
 
 env: TRAVIS_TEST="true"
 
