minor: a small clean up of rake task structure
* removed yard core extension, mongodb.org docs don't even support this anymore
* renamed 'deploy' to 'release', this just makes more sense
* updated Gemfile to support changes, doing it the bundler way
* cleaned up the Rakefile just a bit

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ rvm:
   - jruby-19mode
   - ree
 
-bundler_args: --without deploy development
+bundler_args: --without release development
 
 env: CI="travis"
 
@@ -23,7 +23,6 @@ services:
 
 branches:
   only:
-    - 2.x-development
     - master
     - 1.x-stable
     - 2.x-stable
