--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ bundler_args: --without deploy development
 
 env: CI="travis"
 
-script: bundle exec rspec
+script: bundle exec rake test_with_coveralls
 
 notifications:
   email: false
