--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ bundler_args: --without release development
 
 env: CI="travis"
 
-script: bundle exec rake test_with_coveralls
+script: bundle exec rake spec:ci
 
 notifications:
   email: false
