Rdoc and normalized write values

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -66,6 +66,7 @@ RegexpLiteral:
 CollectionMethods:
   PreferredMethods:
     collect: 'map'
+    inject: 'reduce'
     detect: 'find'
     find_all: 'select'
   Enabled: true
