adding coverage reporting to the 1.x-stable branch
* added coveralls reporting to 1.x stable
* changed the default test suite to address a gap in testing with extensions
* cleaned up testing/commit rake tasks a little (much more to do here)

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ rvm:
 
 bundler_args: --without deploy development
 
-env: TRAVIS_TEST="true"
+env: TRAVIS_CI="true"
 
 script: bundle exec rake test
 
