--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ rvm:
 
 bundler_args: --without deploy development
 
-env: TRAVIS_CI="true"
+env:
+  - TRAVIS_CI="true"
+  - JRUBY_OPTS="-J-Xmn1024m -J-Xms2048m -J-Xmx2048m"
 
 script: bundle exec rake test
 
