--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,15 @@ rvm:
   - 1.8.7
   - 1.9.3
   - 2.0.0
+  - 2.1.0
+  - ruby-head
   - jruby-18mode
   - jruby-19mode
+  - jruby-head
+
+jdk:
+  - oraclejdk7
+  - openjdk7
 
 bundler_args: --without deploy development
 
@@ -25,3 +32,18 @@ branches:
     - master
     - 1.x-stable
     - 2.x-stable
+
+matrix:
+  allow_failures:
+    - rvm: ruby-head
+    - rvm: jruby-head
+    - rvm: 2.1.0
+  exclude:
+    - rvm: 1.8.7
+      jdk: openjdk7
+    - rvm: 1.9.3
+      jdk: openjdk7
+    - rvm: 2.0.0
+      jdk: openjdk7
+    - rvm: ruby-head
+      jdk: openjdk7
