Update travis config, include coveralls in 2.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
 language: ruby
 
 rvm:
-  - 1.8.7
   - 1.9.3
   - 2.0.0
   - 2.1.0
   - ruby-head
-  - jruby-18mode
   - jruby-19mode
   - jruby-head
-  - rbx
+  - rbx-2.0.0
+  - rbx-2.1.1
 
 jdk:
   - oraclejdk7
@@ -38,12 +37,9 @@ matrix:
   allow_failures:
     - rvm: ruby-head
     - rvm: jruby-head
-    - rvm: 2.1.0
-    - rvm: rbx
+    - rvm: rbx-2.0.0
+    - rvm: rbx-2.1.0
   exclude:
-    - rvm: 1.8.7
-      jdk: openjdk7
-      env: CI="travis"
     - rvm: 1.9.3
       jdk: openjdk7
       env: CI="travis"
@@ -56,6 +52,9 @@ matrix:
     - rvm: ruby-head
       jdk: openjdk7
       env: CI="travis"
-    - rvm: rbx
+    - rvm: rbx-2.0.0
+      jdk: openjdk7
+      env: CI="travis"
+    - rvm: rbx-2.1.0
       jdk: openjdk7
       env: CI="travis"
