--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ jdk:
 
 bundler_args: --without deploy development
 
+before_install: rm -f Gemfile.lock
+
 env: TRAVIS_CI="true" JRUBY_OPTS="-J-Xmn1024m -J-Xms2048m -J-Xmx2048m"
 
 script: bundle exec rake test
