--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ jdk:
 
 bundler_args: --without deploy development
 
-before_install: rm -f Gemfile.lock
+before_install: rm -f Gemfile.lock; ls -l
 
 env: TRAVIS_CI="true" JRUBY_OPTS="-J-Xmn1024m -J-Xms2048m -J-Xmx2048m"
 
