diagnostic for bundle issue in Travis with Ruby 1.8.7

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ jdk:
 
 bundler_args: --without deploy development
 
-before_install: rm -f Gemfile.lock; ls -l; bundle update activesupport
+before_install: rm -f Gemfile.lock; ls -l; bundle install --without deploy development || bundle update activesupport
 
 env: TRAVIS_CI="true" JRUBY_OPTS="-J-Xmn1024m -J-Xms2048m -J-Xmx2048m"
 
