--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rvm:
   - 1.9.3
   - 2.0.0
   - 2.1.1
+  - 2.2.0
   - ruby-head
   - jruby-19mode
   - jruby-head
@@ -30,7 +31,6 @@ branches:
   only:
     - master
     - 1.x-stable
-    - 2.x-stable
 
 matrix:
   allow_failures:
@@ -47,6 +47,9 @@ matrix:
     - rvm: 2.1.1
       jdk: openjdk7
       env: CI="travis"
+    - rvm: 2.2.0
+      jdk: openjdk7
+      env: CI="travis"
     - rvm: ruby-head
       jdk: openjdk7
       env: CI="travis"
@@ -60,6 +63,9 @@ matrix:
       jdk: oraclejdk8
       env: CI="travis"
     - rvm: 2.1.1
+      jdk: oraclejdk8
+      env: CI="travis"
+    - rvm: 2.2.0
       jdk: oraclejdk8
       env: CI="travis"
     - rvm: ruby-head
