--- a/spec/support/server_selection/selection/ReplicaSetWithPrimary/read/Secondary_non_matching.yml
+++ b/spec/support/server_selection/selection/ReplicaSetWithPrimary/read/Secondary_non_matching.yml
@@ -1,23 +1,32 @@
 ---
 topology_description:
-  type: ReplicaSetNoPrimary
+  type: ReplicaSetWithPrimary
   servers:
-  - address: b:27017
+  - &1
+    address: b:27017
     avg_rtt_ms: 5
     type: RSSecondary
     tags:
       data_center: nyc
-  - address: c:27017
+  - &2
+    address: c:27017
     avg_rtt_ms: 100
     type: RSSecondary
     tags:
       data_center: nyc
+  - address: a:27017
+    avg_rtt_ms: 26
+    type: RSPrimary
+    tags:
+      data_center: nyc
 operation: read
 read_preference:
-  mode: Primary
+  mode: Secondary
   tag_sets:
-  - {}
-candidate_servers: []
+  - data_center: sf
+candidate_servers:
+- *1
+- *2
 eligible_servers: []
 suitable_servers: []
 in_latency_window: []
